src/objects/ServiceNow_Case_Create__mdt.object
<CustomObject>
    <description>ServiceNow Case Create</description>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Length__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Max Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trim__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Trim ?</label>
        <type>Checkbox</type>
    </fields>
    <label>ServiceNow Case Create</label>
    <pluralLabel>ServiceNow Case Create</pluralLabel>
</CustomObject>